// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core.graphql -> mutations -> authorisation -> login mutation 1`] = `
Object {
  "data": Object {
    "login": Object {
      "firstName": "John",
      "lastName": "Doe",
      "type": "regular",
      "username": "username",
    },
  },
}
`;

exports[`core.graphql -> mutations -> authorisation -> login mutation with error during login 1`] = `
Object {
  "data": Object {
    "login": Object {
      "firstName": "John",
      "lastName": "Doe",
      "type": "regular",
      "username": "username",
    },
  },
}
`;

exports[`core.graphql -> mutations -> authorisation -> login mutation with invalid password 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: E_INVALID_PASSWORD],
  ],
}
`;

exports[`core.graphql -> mutations -> authorisation -> login mutation with invalid username 1`] = `
Object {
  "data": Object {
    "login": null,
  },
  "errors": Array [
    [GraphQLError: E_INVALID_USERNAME],
  ],
}
`;
